objects/Eligible_Program__c.object
<CustomObject>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Eligible Programs</relationshipLabel>
        <relationshipName>Eligible_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>Program_Enrollment__c</referenceTo>
        <relationshipLabel>Eligible Programs</relationshipLabel>
        <relationshipName>Eligible_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Program_Enrollment__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Not eligible</fullName>
                </value>
                <value>
                    <fullName>In/under review by IST (use pre and post pending customer response)</fullName>
                </value>
                <value>
                    <fullName>Pending customer response (pending app completion)</fullName>
                </value>
                <value>
                    <fullName>In/under review by IST -Waiting on POA (manually updated by IST)</fullName>
                </value>
                <value>
                    <fullName>Verified by IST (manually updated by IST)</fullName>
                </value>
                <value>
                    <fullName>Under review by TM under review by RSD</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected [with reasons] (do not call removes from eligibility) TM will be reaching out to you soon</fullName>
                </value>
                <value>
                    <fullName>Enrolled (start date)</fullName>
                </value>
                <value>
                    <fullName>Active (initiated at first sale)</fullName>
                </value>
                <value>
                    <fullName>Remove (for performance)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
                <value>
                    <fullName>Type2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Eligible Program</label>
    <nameField>
        <label>Eligible Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligible Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>